Implement sharding, multilanguage support